docs/apache-airflow-providers-amazon/9.4.0/_sources/_api/airflow/providers/amazon/aws/notifications/sns/index.rst.txt
airflow.providers.amazon.aws.notifications.sns
==============================================

.. py:module:: airflow.providers.amazon.aws.notifications.sns


Attributes
----------

.. autoapisummary::

   airflow.providers.amazon.aws.notifications.sns.send_sns_notification


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.notifications.sns.SnsNotifier


Module Contents
---------------

.. py:class:: SnsNotifier(*, aws_conn_id = SnsHook.default_conn_name, target_arn, message, subject = None, message_attributes = None, region_name = None)

   Bases: :py:obj:`airflow.notifications.basenotifier.BaseNotifier`


   Amazon SNS (Simple Notification Service) Notifier.

   .. seealso::
       For more information on how to use this notifier, take a look at the guide:
       :ref:`howto/notifier:SnsNotifier`

   :param aws_conn_id: The :ref:`Amazon Web Services Connection id <howto/connection:aws>`
       used for AWS credentials. If this is None or empty then the default boto3 behaviour is used.
   :param target_arn: Either a TopicArn or an EndpointArn.
   :param message: The message you want to send.
   :param subject: The message subject you want to send.
   :param message_attributes: The message attributes you want to send as a flat dict (data type will be
       determined automatically).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('target_arn', 'message', 'subject', 'message_attributes', 'aws_conn_id', 'region_name')



   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: region_name
      :value: None



   .. py:attribute:: target_arn


   .. py:attribute:: message


   .. py:attribute:: subject
      :value: None



   .. py:attribute:: message_attributes
      :value: None



   .. py:property:: hook
      :type: airflow.providers.amazon.aws.hooks.sns.SnsHook


      Amazon SNS Hook (cached).



   .. py:method:: notify(context)

      Publish the notification message to Amazon SNS.



.. py:data:: send_sns_notification

